--- a/boggle.css
+++ b/boggle.css
@@ -82,12 +82,13 @@ input[type="button"],
   display: inline-block;
   max-width: 120px;
   min-width: 1em;
-  padding: 2em;
+  padding: 1em;
   margin: 0.1em;
   background-color: #0ebeff;
   border: 1px #fff solid;
   border-radius: 10px;
   color: #fff;
+  font-size: 20pt;
 }
 
 .enter-word,
@@ -96,6 +97,14 @@ input[type="button"],
 }
 
 .btn {
-  border: 0.1em solid #0ebeff;
+  border: 0.05em solid #0ebeff;
   color: #fff;
+  font-size: 12pt;
+}
+
+.warn-duplicate {
+  color: red;
+  font-size: 12pt;
+  font-weight: 1000;
+  visibility: hidden;
 }
